# fluctus

./: .coveragerc  .gitignore  LICENSE-APACHE  LICENSE-MIT  README.rst  pyproject.toml  setup.py  tox.ini
examples/: amplitude_analysis.py  hrf-predictions.py  single-subject-analysis.py  ts_analysis.py
fluctus/: hrf.py  interfaces.py  preprocessing.py  stimuli.py
osclib/: bootstrap.py  hrf.py  interfaces.py  transformers.py  viz.py
tests/: test_transformers.py
