[metadata]
name = 'osclib'
version = '0.0.1'
description = ''
author = 'Daniel Gomez'
author_email = 'dgomez1@mgh.harvard.edu'
license = 'MIT/Apache-2.0'
url = 'https://github.com/_/osclib'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
