[project]
name = 'fluctus'
version = '0.0.1'
description = 'Interface for handling oscillatory data'
author = 'Daniel Gomez'
requires-python = ">=3.7"
author_email = 'd.gomez@posteo.org'
license = "Apache-2.0 OR MIT"
url = 'https://github.com/dangom/fluctus'

[requires]
python_version = ['3.7', '3.8', '3.9', '3.10', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel', 'hatchling']
build-backend = "hatchling.build"

[tool.hatch.commands]
prerelease = 'hatch build'